Fix gx-checkbox alignment when inside gx-form-field

--- a/src/components/renders/bootstrap/form-field/form-field-render.scss
+++ b/src/components/renders/bootstrap/form-field/form-field-render.scss
@@ -62,8 +62,8 @@ gx-form-field {
 
   gx-checkbox {
     .custom-checkbox {
-      padding-top: calc(0.375rem + 1px);
-      padding-left: 0.75em;
+      padding-top: calc(1.375rem + 1px);
+      padding-left: 0.75rem;
     }
 
     .custom-control-label:before,
